src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__self_mut_by_value.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Impl(
            ImplBlock {
                attrs: [],
                type_params: None,
                trait_ty: None,
                self_ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 1,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 10,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 5,
                                end: 10,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                    ),
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_fiber: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 16,
                                    end: 22,
                                    start_line: 1,
                                    start_col: 17,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: Some(
                                        Mut,
                                    ),
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: true,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 27,
                                                    end: 31,
                                                    start_line: 1,
                                                    start_col: 28,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 23,
                                            end: 31,
                                            start_line: 1,
                                            start_col: 24,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 27,
                                                                end: 31,
                                                                start_line: 1,
                                                                start_col: 28,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 27,
                                                    end: 31,
                                                    start_line: 1,
                                                    start_col: 28,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 27,
                                            end: 31,
                                            start_line: 1,
                                            start_col: 28,
                                        },
                                    },
                                    span: Span {
                                        start: 23,
                                        end: 31,
                                        start_line: 1,
                                        start_col: 24,
                                    },
                                },
                            ],
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 36,
                                                            end: 40,
                                                            start_line: 1,
                                                            start_col: 37,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 36,
                                                end: 40,
                                                start_line: 1,
                                                start_col: 37,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 36,
                                        end: 40,
                                        start_line: 1,
                                        start_col: 37,
                                    },
                                },
                            ),
                            effects: None,
                            spec_clauses: [],
                            where_clause: None,
                            body: Some(
                                Block {
                                    statements: [
                                        Expr {
                                            expr: Expr {
                                                kind: AssignOp {
                                                    op: Add,
                                                    target: Expr {
                                                        kind: Field {
                                                            base: Expr {
                                                                kind: Path(
                                                                    ExprPath {
                                                                        segments: [
                                                                            ExprPathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 4,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 43,
                                                                                        end: 47,
                                                                                        start_line: 1,
                                                                                        start_col: 44,
                                                                                    },
                                                                                },
                                                                                args: None,
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 43,
                                                                            end: 47,
                                                                            start_line: 1,
                                                                            start_col: 44,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 43,
                                                                    end: 47,
                                                                    start_line: 1,
                                                                    start_col: 44,
                                                                },
                                                            },
                                                            field: Named(
                                                                Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 5,
                                                                    },
                                                                    span: Span {
                                                                        start: 48,
                                                                        end: 49,
                                                                        start_line: 1,
                                                                        start_col: 49,
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                        span: Span {
                                                            start: 43,
                                                            end: 49,
                                                            start_line: 1,
                                                            start_col: 44,
                                                        },
                                                    },
                                                    value: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 1,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 53,
                                                                    end: 54,
                                                                    start_line: 1,
                                                                    start_col: 54,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 53,
                                                            end: 54,
                                                            start_line: 1,
                                                            start_col: 54,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 43,
                                                    end: 54,
                                                    start_line: 1,
                                                    start_col: 44,
                                                },
                                            },
                                            has_semi: true,
                                        },
                                    ],
                                    expr: Some(
                                        Expr {
                                            kind: Path(
                                                ExprPath {
                                                    segments: [
                                                        ExprPathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 4,
                                                                },
                                                                span: Span {
                                                                    start: 56,
                                                                    end: 60,
                                                                    start_line: 1,
                                                                    start_col: 57,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 56,
                                                        end: 60,
                                                        start_line: 1,
                                                        start_col: 57,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 56,
                                                end: 60,
                                                start_line: 1,
                                                start_col: 57,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 41,
                                        end: 62,
                                        start_line: 1,
                                        start_col: 42,
                                    },
                                },
                            ),
                            span: Span {
                                start: 13,
                                end: 62,
                                start_line: 1,
                                start_col: 14,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 64,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 64,
        start_line: 1,
        start_col: 1,
    },
}
